--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="top">
-        <h1>Woodley Johnson</h1>
+        <h1 id="logo">Woodley Johnson</h1>
 
         <nav>
             <a href="/About/">About</a>
@@ -21,12 +21,12 @@
 
     <div class="wrapper">
 
-        <section id="content"><!--960px-->
+        <section id="content">
             <h2>About Me</h2>
 
             <div class="pic">
-            <img src="C:\Users\Woodley\Basic-Portfolio\images\baseball.png" alt="Woodley" width="300" height="200">    
-                <!--position will be relative-->
+            <img id="main-image" src="images\baseball.png" alt="Woodley" width="300" height="200">    
+                
             </div>    
 
 
