--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
         <h1 id="logo">Woodley Johnson</h1>
 
         <nav>
-            <a href="/About/">About</a>
+            <a href="index.html">About</a>
             <a href="portfolio.html">Portfilio</a>
-            <a href="/contact.html">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     
