--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 
             </div> 
         </section>
-        <footer>Copyright ©</footer>
+        <footer>Copyright Woodley Johnson 2019 ©</footer>
 
     </div> 
     
