--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             </form>
             <!--Source for form code YouTube mmtuts 24: Forms In HTML and CSS | How To Create A Form | Learn HTML and CSS | HTML Tutorial | CSS Tutorial-->
         </section>
-        <footer>Copyright ©</footer>
+        <footer>Copyright Woodley Johnson 2019 ©</footer>
     </div>
 
 </body>    
